# frontend-music-plug-in

./: CMakeLists.txt  README.md  install-codesign.cmake.in  packaging.cmake
src/: CMakeLists.txt  CocoaKeysToProjectM.h  getConfigFilename.cpp  getConfigFilename.h  iprojectM.hpp  iprojectM.mm  iprojectM_mac.mm
src/Resources/: ProjectM-plugin-info.plist  readme.txt  welcome.txt
